Html Css structure

--- a/frontend/main-page/main-page.html
+++ b/frontend/main-page/main-page.html
@@ -10,7 +10,35 @@
     <link rel="stylesheet" href="D:\Projects\Web Projects\online-drum-website\frontend\main-page\main-page.css" />
 </head>
 <body>
-    <h1>Play Drums</h1>
+    <div class="page-title">
+        Play Drums
+    </div>
+
+    <div class="drum-instruments-container">
+
+        <table>
+            <thead>
+
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\kick.png" /> </button> </td>
+                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\snare.png" /> </button> </td>
+                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom1.png" /> </button> </td>
+                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom2.png" /> </button> </td>
+                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom3.png" /> </button> </td>
+                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom4.png" /> </button> </td>
+                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\crash.png" /> </button> </td>
+                </tr>
+            </tbody>
+
+            <tfoot>
+
+            </tfoot>
+        </table>
+
+    </div>
 
     <!-- JavaScript file -->
     <script type="text/javascript" src="D:\Projects\Web Projects\online-drum-website\backend\main-page\main-page.js"></script>
