--- a/frontend/main-page/main-page.html
+++ b/frontend/main-page/main-page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="page-title">
-        Play Drums
+        <strong>Play 🥁 Drums</strong>
     </div>
 
     <div class="drum-instruments-container">
@@ -21,20 +21,70 @@
 
             </thead>
 
-            <tbody>
+            <tbody class="drum-instruments-table-body">
                 <tr>
-                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\kick.png" /> </button> </td>
-                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\snare.png" /> </button> </td>
-                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom1.png" /> </button> </td>
-                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom2.png" /> </button> </td>
-                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom3.png" /> </button> </td>
-                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom4.png" /> </button> </td>
-                    <td> <button> <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\crash.png" /> </button> </td>
+                    <td>
+                        <div class="drum-instruments-image-container">
+                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\kick.png" />
+                        </div>
+                    </td>
+                    <td>
+                        <div class="drum-instruments-image-container">
+                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\snare.png" />
+                        </div>
+                    </td>
+                    <td>
+                        <div class="drum-instruments-image-container">
+                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom1.png" />
+                        </div>
+                    </td>
+                    <td>
+                        <div class="drum-instruments-image-container">
+                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom2.png" />
+                        </div>
+                    </td>
+                    <td>
+                        <div class="drum-instruments-image-container">
+                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom3.png" />
+                        </div>
+                    </td>
+                    <td>
+                        <div class="drum-instruments-image-container">
+                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom4.png" />
+                        </div>
+                    </td>
+                    <td>
+                        <div class="drum-instruments-image-container">
+                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\crash.png" />
+                        </div>
+                    </td>
                 </tr>
             </tbody>
 
-            <tfoot>
-
+            <tfoot class="drum-instruments-table-foot">
+                <tr>
+                    <td>
+                        <p class="drum-instruments-button-label"> Q </p>
+                    </td>
+                    <td>
+                        <p class="drum-instruments-button-label"> W </p>
+                    </td>
+                    <td>
+                        <p class="drum-instruments-button-label"> E </p>
+                    </td>
+                    <td>
+                        <p class="drum-instruments-button-label"> R </p>
+                    </td>
+                    <td>
+                        <p class="drum-instruments-button-label"> T </p>
+                    </td>
+                    <td>
+                        <p class="drum-instruments-button-label"> Y </p>
+                    </td>
+                    <td>
+                        <p class="drum-instruments-button-label"> U </p>
+                    </td>
+                </tr>
             </tfoot>
         </table>
 
