--- a/frontend/main-page/main-page.html
+++ b/frontend/main-page/main-page.html
@@ -25,37 +25,37 @@
                 <tr>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\kick.png" />
+                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/kick.png" alt="Kick_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\snare.png" />
+                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/snare.png" alt="Snare_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom1.png" />
+                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom1.png" alt="Tom1_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom2.png" />
+                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom2.png" alt="Tom2_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom3.png" />
+                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom3.png" alt="Tom3_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\tom4.png" />
+                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom4.png" alt="Tom4_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="D:\Projects\Web Projects\online-drum-website\resources\images\crash.png" />
+                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/crash.png" alt="Crash_Image" />
                         </div>
                     </td>
                 </tr>
