--- a/frontend/main-page/main-page.html
+++ b/frontend/main-page/main-page.html
@@ -15,12 +15,8 @@
     </div>
 
     <div class="drum-instruments-container">
-
-        <table>
-            <thead>
-
-            </thead>
-
+        <table class="drum-instruments-table">
+            <thead></thead>
             <tbody class="drum-instruments-table-body">
                 <tr>
                     <td>
@@ -60,7 +56,6 @@
                     </td>
                 </tr>
             </tbody>
-
             <tfoot class="drum-instruments-table-foot">
                 <tr>
                     <td>
@@ -87,7 +82,6 @@
                 </tr>
             </tfoot>
         </table>
-
     </div>
 
     <!-- JavaScript file -->
