hosting to git pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Drums Online</title>
 
     <!-- Style sheet file -->
-    <link rel="stylesheet" href="D:\Projects\Web Projects\online-drum-website\frontend\main-page\main-page.css" />
+    <link rel="stylesheet" href="frontend\main-page\main-page.css" />
 </head>
 <body>
     <div class="page-title">
@@ -21,37 +21,37 @@
                 <tr>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/kick.png" alt="Kick_Image" />
+                            <img class="drum-instruments-image" src="resources/images/kick.png" alt="Kick_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/snare.png" alt="Snare_Image" />
+                            <img class="drum-instruments-image" src="resources/images/snare.png" alt="Snare_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom1.png" alt="Tom1_Image" />
+                            <img class="drum-instruments-image" src="resources/images/tom1.png" alt="Tom1_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom2.png" alt="Tom2_Image" />
+                            <img class="drum-instruments-image" src="resources/images/tom2.png" alt="Tom2_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom3.png" alt="Tom3_Image" />
+                            <img class="drum-instruments-image" src="resources/images/tom3.png" alt="Tom3_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/tom4.png" alt="Tom4_Image" />
+                            <img class="drum-instruments-image" src="resources/images/tom4.png" alt="Tom4_Image" />
                         </div>
                     </td>
                     <td>
                         <div class="drum-instruments-image-container">
-                            <img class="drum-instruments-image" src="https://github.com/unrealblood/online-drum-website/raw/main/resources/images/crash.png" alt="Crash_Image" />
+                            <img class="drum-instruments-image" src="resources/images/crash.png" alt="Crash_Image" />
                         </div>
                     </td>
                 </tr>
@@ -85,6 +85,6 @@
     </div>
 
     <!-- JavaScript file -->
-    <script type="text/javascript" src="D:\Projects\Web Projects\online-drum-website\backend\main-page\main-page.js"></script>
+    <script type="text/javascript" src="backend\main-page\main-page.js"></script>
 </body>
 </html>
